much more work in javascript to finalize the button, also logo has been distorted, must be bug squashed.

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,10 @@
     background-color: red;
     border-radius: 1vw;
     padding: .5vh 1vw .5vh 1vw;
+    margin-top: 2.2vh;
+    border-radius: 24px;
+    text-decoration: none;
+    font-size: 3vh;
 }
 
 #Plumbing-Slider {
